[gd_scene load_steps=17 format=3 uid="uid://c4odqk5bfm8yr"]

[ext_resource type="PackedScene" uid="uid://b080dv1gjba8h" path="res://Obstacles/obstacle.tscn" id="1_gfh3x"]
[ext_resource type="Script" path="res://Obstacles/tnt/TNTChest.gd" id="2_ij2gm"]
[ext_resource type="PackedScene" uid="uid://ckmdgks81agq7" path="res://KayKit_DungeonRemastered_1.1_FREE/Assets/gltf/chest_gold.gltf" id="3_38yfs"]
[ext_resource type="Script" path="res://Obstacles/tnt/TimerView.gd" id="4_6isgj"]
[ext_resource type="Texture2D" uid="uid://0xdguvsonoh6" path="res://Materials/Pillow_1-128x128.png" id="4_q5330"]

[sub_resource type="SphereShape3D" id="SphereShape3D_s3x53"]
radius = 0.414426

[sub_resource type="BoxShape3D" id="BoxShape3D_j0777"]
size = Vector3(0.2, 0.5, 0.2)

[sub_resource type="Gradient" id="Gradient_ccskg"]
colors = PackedColorArray(0.660465, 0.256225, 0, 1, 0.932523, 0.916247, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_24ofe"]
gradient = SubResource("Gradient_ccskg")

[sub_resource type="Curve" id="Curve_biyoi"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.833333, 0.879121), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_t4wfu"]
curve = SubResource("Curve_biyoi")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_os5hd"]
particle_flag_align_y = true
emission_shape = 1
emission_sphere_radius = 0.3
direction = Vector3(0, 0, 0)
spread = 180.0
initial_velocity_min = 1.0
initial_velocity_max = 2.0
scale_min = 0.1
scale_curve = SubResource("CurveTexture_t4wfu")
color = Color(1, 0.43, 0.1, 1)
color_ramp = SubResource("GradientTexture1D_24ofe")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_t5bg5"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_8t5cn"]
noise = SubResource("FastNoiseLite_t5bg5")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_txsk0"]
transparency = 1
blend_mode = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("4_q5330")
heightmap_deep_parallax = true
heightmap_min_layers = 8
heightmap_max_layers = 32
detail_mask = SubResource("NoiseTexture2D_8t5cn")
billboard_mode = 2
billboard_keep_scale = true

[sub_resource type="QuadMesh" id="QuadMesh_33ias"]
material = SubResource("StandardMaterial3D_txsk0")

[node name="TNTChest" instance=ExtResource("1_gfh3x")]
transform = Transform3D(0.993185, -0.116549, 0, 0.115328, 0.982777, 0.144391, -0.0168287, -0.143407, 0.989521, 0, -0.0174288, 0)
script = ExtResource("2_ij2gm")

[node name="ExplodeArea" type="Area3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.07, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ExplodeArea" index="0"]
shape = SubResource("SphereShape3D_s3x53")

[node name="chest_gold2" parent="Body" index="0" instance=ExtResource("3_38yfs")]
transform = Transform3D(0.0991146, -0.013138, -0.00191908, 0.0131422, 0.0991326, 9.77973e-05, 0.00188959, -0.000349142, 0.0999815, 0, -0.07, 0)

[node name="CollisionShape3D" parent="Body" index="1"]
shape = SubResource("BoxShape3D_j0777")

[node name="ExplosionTimer" type="Timer" parent="." index="2"]
wait_time = 3.0
one_shot = true

[node name="GPUParticles3D" type="GPUParticles3D" parent="." index="3"]
emitting = false
amount = 40
lifetime = 0.3
one_shot = true
process_material = SubResource("ParticleProcessMaterial_os5hd")
draw_pass_1 = SubResource("QuadMesh_33ias")

[node name="TimerView" type="Label3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.311119, 0)
visible = false
billboard = 1
text = "3"
script = ExtResource("4_6isgj")

[connection signal="timeout" from="ExplosionTimer" to="." method="_on_explosion_timer_timeout"]
[connection signal="finished" from="GPUParticles3D" to="." method="_on_gpu_particles_3d_finished"]
